# solver

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD.bazel  DEPS.bzl  DEVELOPMENT.md  LICENSE  Makefile  README.md  WORKSPACE  constraint.go  datadriven_test.go  doc.go  domain.go  domain_test.go  go.mod  go.sum  interval.go  intvar.go  linear_solver.i  linear_solver_go_wrap.cc  linearexpr.go  linearexpr_test.go  model.go  options.go  ortools.go  ortools_test.go  result.go  solver_test.go
.github/workflows/: main.yml
cpsatsolver/: BUILD.bazel  constraint.go  cpsatsolver_test.go  domain.go  interval.go  intvar.go  linearexpr.go  model.go  result.go  solver.go
internal/: .gitattributes  BUILD.bazel  doc.go  internal.go  internal_test.go  proto.i  sat.i  wrapper.cc  wrapper.h
internal/cpsatsolver/: .gitattributes  BUILD.bazel  cpsatsolver.go  cpsatsolver.i  cpsatsolver_test.go  cpsatsolver_wrapper.cc  cpsatsolver_wrapper.h  doc.go  proto.i  vector.i
internal/cpsatsolver/pb/: .gitattributes  BUILD.bazel  cp_model.pb.go  sat_parameters.pb.go
internal/linearsolver/: .gitattributes  BUILD.bazel  doc.go  linear_solver.i  linear_solver_go_wrap.cc  linearsolver.go  linearsolver.i  linearsolver_test.go  linearsolver_wrapper.cc
internal/pb/: BUILD.bazel  README.md  cp_model.pb.go  cp_model.proto  sat_parameters.pb.go  sat_parameters.proto
internal/swig/: BUILD.bazel  linear_solver_go_wrap.cc  swig.go  swig_doc.go  swig_test.go
internal/testutils/: BUILD.bazel  compile.go  scanner.go
internal/testutils/bazel/: BUILD.bazel  bazel.go  non_bazel.go
internal/testutils/parser/: BUILD.bazel  grammar.ebnf  parser.go  parser_test.go
internal/testutils/parser/ast/: BUILD.bazel  argument.go  ast.go  method.go
internal/testutils/parser/lexer/: BUILD.bazel  lexer.go  lexer_test.go
internal/testutils/parser/lexer/testdata/: base  statements
internal/testutils/parser/testdata/: statements  units
internal/testutils/parser/token/: BUILD.bazel  token.go  type_string.go
linearsolver/: BUILD.bazel  linearsolver.go  linearsolver_test.go
ortoolsswig/: BUILD.bazel  linear_solver.i  linear_solver_go_wrap.cc  ortoolsswig.go  ortoolsswig_doc.go  ortoolsswig_test.go
testdata/: basic  cumulative  literals  print  recognize
