load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/gonzojive/or-tools-go/ortools
# gazelle:exclude node_modules
# gazelle:exclude bazel-out
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["ortools.go"],
    importpath = "github.com/gonzojive/or-tools-go/ortools",
    visibility = ["//visibility:public"],
    deps = ["//ortoolsswig:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["ortools_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
    ],
)
