load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude c-deps/or-tools
# gazelle:exclude c-deps/abseil-cpp
gazelle(
    name = "gazelle",
    prefix = "github.com/irfansharif/or-tools",
)

go_library(
    name = "or-tools",
    srcs = ["ortools.go"],
    importpath = "github.com/irfansharif/or-tools",
    visibility = ["//visibility:public"],
    deps = ["//internal/swig"],
)

go_test(
    name = "or-tools_test",
    srcs = ["ortools_test.go"],
    embed = [":or-tools"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
