load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "linearsolver",
    srcs = ["linearsolver.go"],
    importpath = "github.com/irfansharif/or-tools/linearsolver",
    visibility = ["//visibility:public"],
    deps = ["//internal/linearsolver"],
)

go_test(
    name = "linearsolver_test",
    srcs = ["linearsolver_test.go"],
    embed = [":linearsolver"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
