load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "linear_solver_go_wrap.cc",
        "ortoolsswig.go",
        "ortoolsswig_doc.go",
    ],
    cdeps = [
        ":ortools_dependencies",
    ],
    cgo = True,
    cxxopts = [],
    importpath = "github.com/gonzojive/or-tools-go/ortools/ortoolsswig",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ortools_dependencies",
    srcs = [],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:optional",
        "@ortools//ortools/base",
        "@ortools//ortools/linear_solver",
        "@ortools//ortools/linear_solver:linear_solver_cc_proto",
    ],
    hdrs = [
        "@ortools//ortools/linear_solver:model_exporter_swig_helper.h",
    ],
    copts = [],
)

go_test(
    name = "go_default_test",
    srcs = ["ortoolsswig_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
    ],
)
