load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cpsatsolver",
    srcs = [
        "cpsatsolver.go",
        "cpsatsolver_wrapper.cc",
        "cpsatsolver_wrapper.h",
        "doc.go",
    ],
    cdeps = [":ortools-cpsat"],
    cgo = True,
    importpath = "github.com/irfansharif/or-tools/internal/cpsatsolver",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cpsatsolver/pb",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

cc_library(
    name = "ortools-cpsat",
    srcs = [],
    hdrs = [
        "@ortools//ortools/sat:swig_helper.h",
    ],
    copts = [],
    deps = [
        "@ortools//ortools/base",
        "@ortools//ortools/sat:cp_model_cc_proto",
        "@ortools//ortools/sat:cp_model_checker",
        "@ortools//ortools/sat:cp_model_solver",
        "@ortools//ortools/sat:sat_parameters_cc_proto",
    ],
)

go_test(
    name = "cpsatsolver_test",
    srcs = ["cpsatsolver_test.go"],
    embed = [":cpsatsolver"],
    deps = ["//internal/cpsatsolver/pb"],
)
