load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testutils",
    srcs = [
        "compile.go",
        "scanner.go",
    ],
    importpath = "github.com/irfansharif/solver/internal/testutils",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/testutils/bazel",
        "//internal/testutils/parser",
        "//internal/testutils/parser/ast",
    ],
)

alias(
    name = "go_default_library",
    actual = ":testutils",
    visibility = ["//:__subpackages__"],
)
