load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bazel",
    srcs = ["bazel.go"],
    importpath = "github.com/irfansharif/solver/internal/testutils/bazel",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_stretchr_testify//require"],
)

alias(
    name = "go_default_library",
    actual = ":bazel",
    visibility = ["//:__subpackages__"],
)
